Fix - icon alignment in navigation bar for big and small screens.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -267,7 +267,24 @@ input[name='q']::placeholder {
 }
 
 
+/* Header icon */
+.list-inline-item .nav-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.3rem 0.5rem;
+  text-align: center;
+}
 
+.list-inline-item .nav-link i {
+  font-size: 1.2rem;
+}
+
+.list-inline-item .nav-link small {
+  font-size: 0.75rem;
+  margin-top: 0.2rem;
+  display: block;
+}
 
 /* FOOTER */
 
@@ -278,9 +295,6 @@ footer input[type="email"] {
     padding: 0.5rem;
 }
 
-/* footer button {
-    border-radius: 0;
-} */
 
 
 
